# pypi-server

./: .gitignore  app.py  pyproject.toml  userdata.sh
container/: Dockerfile
pypi_server/: pypi_server_stack.py  pypi_server_stack_new_efs.py
tests/unit/: test_pypi_server_stack.py
